--- a/anna-web2-hw-files-main/deploy/index.html
+++ b/anna-web2-hw-files-main/deploy/index.html
@@ -28,8 +28,8 @@
             </div>
         </section>
     <section id="hero">
-                <div>
                     <img src="img/hero/hero.jpg" alt="hero image">
+                    <section>
                     <ul>
                         <li>
                             <a href="#">
@@ -57,7 +57,7 @@
                             </a>
                         </li>
                     </ul>
-                </div>
+                </section>
             </section>
     <section id="planning">
                     <div>
